# trajectory-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
blueprints/: ADDING_A_FORMAT.md  TOPOLOGY_FORMAT_BLUEPRINT.md  TRAJECTORY_FORMAT_BLUEPRINT.md  TYPING_FORMAT_BLUEPRINT.md
developer/: dev_debug_cnt.ipynb  dev_debug_maestro.ipynb  dev_main.ipynb
examples/: dev_tutorial.ipynb  tutorial.ipynb  tutorial_advanced.ipynb  tutorial_dev.ipynb
simple_trajectory_parser/: parse_traj.py
src/trajectory_kit/: __init__.py  _query_help.py  coor_parse.py  dcd_parse.py  file_parse_help.py  mae_parse.py  main.py  pdb_parse.py  pos_writer.py  psf_parse.py  query_help.py  xyz_parse.py
tests/: conftest.py  pytest.ini  test_main_file.py  test_metadata.py  test_paths.template.json  test_queries_real.py  test_queries_synthetic.py  test_query_help.py  test_topology.py  test_trajectory.py  test_typing.py
tests/integration/: test_bonded_with.py  test_cross_consistency.py  test_envelope.py  test_query_filter.py
tests/unit/: test_coor_parse.py  test_dcd_parse.py  test_file_parse_help.py  test_mae_parse.py  test_main.py  test_pdb_parse.py  test_pos_writer.py  test_psf_parse.py  test_query_help.py  test_xyz_parse.py
tutorials/: tutorial.ipynb  tutorial_pos_writer.ipynb
