[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beta"
version = "0.2.1"
description = "A fast, engine-agnostic molecular dynamics trajectory extraction library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Stefan Zhikharev", email = "stefan.zhikharev@warwick.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/genericuser101/trajectory-kit"
"Bug Tracker" = "https://github.com/genericuser101/trajectory-kit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trajectory_kit" = ["py.typed"]